--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ebarnali",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://sahoochinmay.github.io/QFill",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.3.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
@@ -28,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
