--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ebarnali",
+  "name": "qfill",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://sahoochinmay.github.io/QFill",
